--- a/.editorconfig
+++ b/.editorconfig
@@ -18,5 +18,8 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.html]
+indent_size = 4
+
 [*.md]
 trim_trailing_whitespace = false
